--- a/playground/index.html
+++ b/playground/index.html
@@ -6,5 +6,6 @@
     <script src="./js/index.js"></script>
   </head>
   <body>
+    <div id="ctrl-target" style="width: 100%; height: 100%; background-color:aqua;"></div>
   </body>
 </html>
